[tool.poetry]
name = "yalesmartalarmclient"
version = "0.3.9"
description = "Interact with Yale Smart Alarm systems"
authors = ["Dominic Willson <domwillcode@gmail.com>"]
maintainers = ["G Johansson <goran.johansson@shiftit.se>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/domwillcode/yale-smart-alarm-client"
repository = "https://github.com/domwillcode/yale-smart-alarm-client"
documentation = "https://github.com/domwillcode/yale-smart-alarm-client"
keywords = ["alarm", "Yale", "Smart Alarm"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
]
packages = [
    { include = "yalesmartalarmclient" },
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/domwillcode/yale-smart-alarm-client/issues"
Changelog = "https://github.com/domwillcode/yale-smart-alarm-client/releases"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
