[tool.poetry]
name = "yalesmartalarmclient"
version = "0.3.9"
description = "Interact with Yale Smart Alarm systems"
authors = [
  "Dominic Willson <domwillcode@gmail.com>",
  "G Johansson <goran.johansson@shiftit.se>"
]
maintainers = ["G Johansson <goran.johansson@shiftit.se>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/domwillcode/yale-smart-alarm-client"
repository = "https://github.com/domwillcode/yale-smart-alarm-client"
documentation = "https://github.com/domwillcode/yale-smart-alarm-client"
keywords = ["alarm", "Yale", "Smart Alarm"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
]
packages = [
    { include = "yalesmartalarmclient" },
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/domwillcode/yale-smart-alarm-client/issues"
Changelog = "https://github.com/domwillcode/yale-smart-alarm-client/releases"

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.11"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
#no_implicit_reexport = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
